--- a/publicity/nips2011paper/hyperoptim.bib
+++ b/publicity/nips2011paper/hyperoptim.bib
@@ -119,12 +119,12 @@
   url =          {PDFs/ViVaWa06.pdf}
 }
 
-@inproceedings{bergstra+bardenet+bengio+kegl:2011,
+@inproceedings{nipspaper,
     author = {J. Bergstra and R. Bardenet and Y. Bengio and B. K{\'e}gl},
     title = {Algorithms for Hyper-parameter Optimization},
     booktitle = {Proc. of NIPS},
     year = {2011},
-    pages = {accepted}
+    note = {accepted}
 }
 
 @incollection{ginsbourger+leriche+carraro:2010,
