updated bayes workshop abstract

--- a/publicity/nips2011paper/hyperoptim.bib
+++ b/publicity/nips2011paper/hyperoptim.bib
@@ -118,3 +118,9 @@
   year =         {2006},
   url =          {PDFs/ViVaWa06.pdf}
 }
+@incollection{nipspaper,
+    author={J. Bergstra and R. Bardenet and Y. Bengio and B. K{\'e}gl},
+    title={Algorithms for Hyper-parameter Optimization},
+    year={2011},
+    booktitle={NIPS 24},
+}
