--- a/publicity/nips2011paper/jb.bib
+++ b/publicity/nips2011paper/jb.bib
@@ -1085,6 +1085,16 @@ l. Finally, we study how activations and gradients vary across layers and during
     volume = {26},
     year = {1987},
 }
+@incollection{ginsbourger+leriche+carraro:2010,
+    author = {D. Ginsbourger and R. {Le Riche} and L. Carraro},
+    title = {Kriging is Well-Suited to Parallelize Optimization},
+    booktitle = {Computational Intelligence in Expensive Optimization Problems},
+    series = {Adaptation, Learning, and Optimization},
+    editor = {Tenne, Y. and Goh, C. and Hiot, L. and Ong, Y.},
+    publisher = {Springer Berlin Heidelberg},
+    volume = 2,
+    pages = {131-162},
+}
 @article{goodale+milner:1992,
     author={M. A. Goodale and A. D. Milner},
     title={Separate Visual Pathways for Perception and Action},
