typo: normal string 'x' -> math string $

--- a/tutorial/01.BasicTutorial.ipynb
+++ b/tutorial/01.BasicTutorial.ipynb
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The optimal x value found by HyperOpt is approximately 3.0. This is very close to a solution of $y=(x-3)^2+2$."
+    "The optimal $x$ value found by HyperOpt is approximately 3.0. This is very close to a solution of $y=(x-3)^2+2$."
    ]
   }
  ],
