Search Space Example: hp.randint(label, low, high)

--- a/tutorial/01.BasicTutorial.ipynb
+++ b/tutorial/01.BasicTutorial.ipynb
@@ -90,7 +90,7 @@
    "source": [
     "We are trying to optimize the `objective` by changing the HyperParameter $x$. That's why we will declare a search space for $x$. The functions related to the search space are implemented in `hyperopt.hp`. The list is as follows.\n",
     "\n",
-    "* `hp.randint(label, upper)`\n",
+    "* `hp.randint(label, upper)` or `hp.randint(label, low, high)`\n",
     "* `hp.uniform(label, low, high)`\n",
     "* `hp.loguniform(label, low, high)`    \n",
     "* `hp.normal(label, mu, sigma)`\n",
