Fixing awkward content

--- a/docs/templates/tutorials/01.BasicTutorial.md
+++ b/docs/templates/tutorials/01.BasicTutorial.md
@@ -1,6 +1,6 @@
 # 01. Basic Tutorial
 
-In Basic Tutorial, you can learn the following things:
+In this tutorial, you can learn how to:
 
 * Define Search Space
 * Optimize Objective Function
@@ -38,10 +38,10 @@ plt.show()
 ```
 
 
-![png](01-basic-tutorial_files/01-basic-tutorial_6_0.png)
+![png](01.BasicTutorial_files/01.BasicTutorial_6_0.png)
 
 
-We are trying to optimize the `objective` by changing the HyperParameter $x$. That's why we will declare a search space for $x$. The functions related to the search space are implemented in `hyperopt.hp`. The list is as follows.
+We are trying to optimize the objective function by changing the HyperParameter $x$. That's why we will declare a search space for $x$. The functions related to the search space are implemented in `hyperopt.hp`. The list is as follows.
 
 * `hp.randint(label, upper)` or `hp.randint(label, low, high)`
 * `hp.uniform(label, low, high)`
@@ -63,14 +63,14 @@ We will use the most basic `hp.uniform` in this tutorial.
 space = hp.uniform('x', -10, 10)
 ```
 
-Now, there's only one last step left. So far, we have defined a function of purpose, and we have defined a search space for $x$. Now we can search through the search space $x$ and find the value of $x$ that can optimize the `objective`. HyperOpt performs it using `fmin`.
+Now, there's only one last step left. So far, we have defined a function of purpose, and we have defined a search space for $x$. Now we can search through the search space $x$ and find the value of $x$ that can optimize the objective function. HyperOpt performs it using `fmin`.
 
 
 ```python
 best = fmin(
     fn=objective, # Objective Function to optimize
     space=space, # Hyperparameter's Search Space
-    algo=tpe.suggest, # Optimization algorithm (representative TPE)
+    algo=tpe.suggest, # Optimization algorithm
     max_evals=1000 # Number of optimization attempts
 )
 print(best)
