--- a/docs/templates/tutorials/02.MultipleParameterTutorial.md
+++ b/docs/templates/tutorials/02.MultipleParameterTutorial.md
@@ -1,9 +1,9 @@
 # 02. MultipleParameterTutorial
 
-In [01.BasicTutorial](https://github.com/hyperopt/hyperopt/blob/master/tutorial/01.BasicTutorial.ipynb), you learned about optimizing a single HyperParameter function. At MultipleParameterTurial, you learn the following things.
+In this tutorial, you will learn how to:
 
 * Optimize the Objective Function with Multiple HyperParameters
-* Define various search space
+* Define different types of Search Space
 
 
 ```python
@@ -12,7 +12,7 @@ from hyperopt import tpe, hp, fmin
 import numpy as np
 ```
 
-Declares a purpose function to optimize. Unlike last time, we will optimize the function with two Hyperparameters, $x$ and $y$.
+Declares a objective function to optimize. Unlike last time, we will optimize the function with two Hyperparameters, $x$ and $y$.
 
 $$ z = sin\sqrt{x^2 + y^2} $$
 
@@ -49,7 +49,7 @@ plt.show()
 ```
 
 
-![png](02-multiple-parameter-tutorial_files/02-multiple-parameter-tutorial_5_0.png)
+![png](02.MultipleParameterTutorial_files/02.MultipleParameterTutorial_5_0.png)
 
 
 Likewise, let's define the search space. However, this time, you need to define two search spaces($x, y$), so you put each of them in the `dict()`.
@@ -75,52 +75,41 @@ best = fmin(
 print(best)
 ```
 
-    100%|██████████| 1000/1000 [00:08<00:00, 124.16trial/s, best loss: -0.9999998753676712]
-    {'x': 4.283678790265057, 'y': 1.9626514514966948}
+    100%|██████████| 1000/1000 [00:07<00:00, 127.90trial/s, best loss: -0.9999976342002768]
+    {'x': 4.278018218372159, 'y': 1.97095757186186}
 
 
-## Using various search spaces 
+## Define different types of Search Space
 
-`hp.randint(label, upper)` searches the integer in the [0, upper) interval.
-
-
-```python
-f = lambda x: -x
-
-best = fmin(
-    fn=f,
-    space=hp.randint('x', 5),
-    algo=tpe.suggest,
-    max_evals=10
-)
-print(best)
-```
-
-    100%|██████████| 10/10 [00:00<00:00, 877.51trial/s, best loss: -4.0]
-    {'x': 4}
-
-
-`hp.choice(label, list)` searches for elements in the list.
+* `hp.randint(label, upper)` searches the integer in the [0, upper) interval.
+* `hp.choice(label, list)` searches for elements in the list.
 
 
 ```python
-def f(x):
-    if x == 'james':
-        return 0
-    if x == 'max':
-        return 1
-    if x == 'wansoo':
-        return 2
+def f(params):
+    x1, x2 = params['x1'], params['x2']
+    if x1 == 'james':
+        return -1 * x2
+    if x1 == 'max':
+        return 2 * x2
+    if x1 == 'wansoo':
+        return -3 * x2
+
+search_space = {
+    'x1': hp.choice('x1', ['james', 'max', 'wansoo']),
+    'x2': hp.randint('x2', -5, 5)
+}
 
 best = fmin(
     fn=f,
-    space=hp.choice('x', ['james', 'max', 'wansoo']),
+    space=search_space,
     algo=tpe.suggest,
-    max_evals=10
+    max_evals=100
 )
+
 print(best)
 ```
 
-    100%|██████████| 10/10 [00:00<00:00, 638.73trial/s, best loss: 0.0]
-    {'x': 0}
+    100%|██████████| 100/100 [00:00<00:00, 396.61trial/s, best loss: -12.0]
+    {'x1': 2, 'x2': 4}
 
