--- a/tutorial/01.BasicTutorial.ipynb
+++ b/tutorial/01.BasicTutorial.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In Basic Tutorial, you can learn the following things:\n",
+    "In this tutorial, you can learn how to:\n",
     "\n",
     "* Define Search Space\n",
     "* Optimize Objective Function\n",
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are trying to optimize the `objective` by changing the HyperParameter $x$. That's why we will declare a search space for $x$. The functions related to the search space are implemented in `hyperopt.hp`. The list is as follows.\n",
+    "We are trying to optimize the objective function by changing the HyperParameter $x$. That's why we will declare a search space for $x$. The functions related to the search space are implemented in `hyperopt.hp`. The list is as follows.\n",
     "\n",
     "* `hp.randint(label, upper)` or `hp.randint(label, low, high)`\n",
     "* `hp.uniform(label, low, high)`\n",
@@ -119,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, there's only one last step left. So far, we have defined a function of purpose, and we have defined a search space for $x$. Now we can search through the search space $x$ and find the value of $x$ that can optimize the `objective`. HyperOpt performs it using `fmin`."
+    "Now, there's only one last step left. So far, we have defined a function of purpose, and we have defined a search space for $x$. Now we can search through the search space $x$ and find the value of $x$ that can optimize the objective function. HyperOpt performs it using `fmin`."
    ]
   },
   {
@@ -140,7 +140,7 @@
     "best = fmin(\n",
     "    fn=objective, # Objective Function to optimize\n",
     "    space=space, # Hyperparameter's Search Space\n",
-    "    algo=tpe.suggest, # Optimization algorithm (representative TPE)\n",
+    "    algo=tpe.suggest, # Optimization algorithm\n",
     "    max_evals=1000 # Number of optimization attempts\n",
     ")\n",
     "print(best)"
