Add hp.pchoice and hp.uniformint to tutorial

--- a/tutorial/01.BasicTutorial.ipynb
+++ b/tutorial/01.BasicTutorial.ipynb
@@ -100,6 +100,8 @@
     "* `hp.qnormal(label, mu, sigma, q)`\n",
     "* `hp.qlognormal(label, mu, sigma, q)`\n",
     "* `hp.choice(label, list)`\n",
+    "* `hp.pchoice(label, p_list)` with `p_list` as a list of `(probability, option)` pairs\n",
+    "* `hp.uniformint(label, low, high, q)` or `hp.uniformint(label, low, high)` since `q = 1.0`\n",
     "\n",
     "We will use the most basic `hp.uniform` in this tutorial.\n",
     "    "
