Conversion to Python3 and pep8

--- a/docs/templates/tutorials/01.BasicTutorial.md
+++ b/docs/templates/tutorials/01.BasicTutorial.md
@@ -53,6 +53,9 @@ We are trying to optimize the objective function by changing the HyperParameter 
 * `hp.qnormal(label, mu, sigma, q)`
 * `hp.qlognormal(label, mu, sigma, q)`
 * `hp.choice(label, list)`
+* `hp.pchoice(label, p_list)` with `p_list` as a list of `(probability, option)` pairs
+* `hp.uniformint(label, low, high, q)` or `hp.uniformint(label, low, high)` since `q = 1.0`
+
 
 We will use the most basic `hp.uniform` in this tutorial.
     
